<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="home_value">Home Value</string>
    <string name="home_value_hint">$</string>
    <string name="down_payment">Down Payment</string>
    <string name="down_payment_hint">$</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="interest_rate_hint">%</string>
    <string name="terms">Terms</string>
    <string name="property_tax_rate">Property Tax Rate</string>
    <string name="property_tax_rate_hint">%</string>
    <string name="payment_header">Payment</string>
    <string name="total_tax_paid">Total Tax Paid</string>
    <string name="total_interest_paid">Total Interest Paid</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="pay_off_date">Pay Off Date</string>
    <string-array name="terms_list">
        <item>Select Term(in years)</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>
    <string name="btn_reset">Reset</string>
    <string name="btn_calculate">Calculate</string>
</resources>