<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aakash.mortgagecalculator.InputFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/homeValueTV"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:clickable="true"
            android:hint="@string/home_value_hint"
            android:id="@+id/homeValue"
            android:layout_below="@+id/homeValueTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/downPaymentTV"
            android:layout_below="@id/homeValue"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/downPayment"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/down_payment_hint"
            android:layout_below="@+id/downPaymentTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/interestRateTV"
            android:layout_below="@id/downPayment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/interestRate"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/interest_rate_hint"
            android:layout_below="@+id/interestRateTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/termsTV"
            android:layout_below="@id/interestRate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms"
            android:entries="@array/terms_list"
            android:layout_below="@+id/termsTV"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_tax_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/propTaxRateTV"
            android:layout_below="@id/terms"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/propTaxRate"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/property_tax_rate_hint"
            android:layout_below="@+id/propTaxRateTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:id="@+id/btnCalculate"
            android:background="#FF2F93FF"
            android:layout_below="@+id/propTaxRate"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"
            android:id="@+id/btnReset"
            android:background="#FFFF5346"
            android:layout_alignTop="@+id/btnCalculate"
            android:layout_toEndOf="@+id/downPaymentTV" />
    </RelativeLayout>
</FrameLayout>
