<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aakash.mortgagecalculator.OutputFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/payment_header"
            android:textStyle="bold"
            android:id="@+id/paymentHeader"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/total_tax_paid"
            android:id="@+id/totalTaxPaidHeader"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/paymentHeader"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totalTaxPaid"
            android:layout_alignTop="@+id/totalTaxPaidHeader"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/total_interest_paid"
            android:id="@+id/totalInterestPaidHeader"
            android:layout_below="@+id/totalTaxPaidHeader"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totalInterestPaid"
            android:layout_alignTop="@+id/totalInterestPaidHeader"
            android:layout_alignStart="@+id/totalTaxPaid"
            android:layout_marginRight="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/monthly_payment"
            android:id="@+id/monthlyPaymentHeader"
            android:layout_below="@+id/totalInterestPaidHeader"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/monthlyPayment"
            android:layout_alignTop="@id/monthlyPaymentHeader"
            android:layout_alignStart="@id/totalInterestPaid"
            android:layout_marginRight="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pay_off_date"
            android:id="@+id/payOffDateHeader"
            android:layout_below="@+id/monthlyPaymentHeader"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/payOffDate"
            android:layout_alignTop="@+id/payOffDateHeader"
            android:layout_alignStart="@+id/monthlyPayment"
            android:layout_marginRight="30dp" />


    </RelativeLayout>
</FrameLayout>